--- a/PebbleMenu/res/layout/activity_main.xml
+++ b/PebbleMenu/res/layout/activity_main.xml
@@ -13,5 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    
+    <ListView
+        android:id="@+id/mediaPlayerList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
